slurm-370042.out
src/stencil_template_parallel.c: In function ‘initialize_sources’:
src/stencil_template_parallel.c:701:3: error: implicit declaration of function ‘srand48’; did you mean ‘srand’? [-Wimplicit-function-declaration]
  701 |   srand48(time(NULL) ^ Me); // get a different seed per rank
      |   ^~~~~~~
      |   srand
src/stencil_template_parallel.c:709:44: error: implicit declaration of function ‘lrand48’ [-Wimplicit-function-declaration]
  709 |               tasks_with_sources[i] = (int)lrand48() % Ntasks; }
      |                                            ^~~~~~~
--------------------------------------------------------------------------
The specified map-by directive is not recognized:

  Directive: none
  Valid directives: slot:hwthread:core:l1cache:l2cache:l3cache:numa:package:node:seq:ppr:rankfile:pe-list=:likwid

Please check for a typo or ensure that the directive is a supported one.
--------------------------------------------------------------------------
